-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.4
-
Windows 10
-
-
baed8534bc1dac36a9d0ef4240fc14398076a192 (qt/qtbase/5.14)
Tooltip positions don't seem to adapt to the cursor size selected in Windows. With a small cursor size the tooltip position is mostly okay and the cursor will not cover any significant portion of the text within the tooltip. However, with a large cursor size the cursor can easily overlap the first letter of the tooltip almost entirely forcing user to move the cursor to be able to read the text.
Steps to reproduce:
- Build and run the attached example
- Change your cursor size to large (Windows+I , pointer size)
- Hover cursor over the button to display tooltip
- relates to
-
QTBUG-118612 Large size cursor overlaps tooltips on linux
-
- Closed
-
- resulted in
-
QTBUG-83916 Any Tooltip crashes on Android
-
- Closed
-
For Gerrit Dashboard: QTBUG-79627 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
280424,6 | Move the tooltip out of the way of very large mouse cursors | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |
283062,2 | Move the tooltip out of the way of very large mouse cursors | 5.15 | qt/qtbase | Status: MERGED | 0 | 0 |